--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
                         <button id="runBtn" class="btn btn-primary hover-lift">
                             ▶ Run
                         </button>
-                        <button id="clearBtn" class="btn btn-secondary hover-lift">🗑️ Clear</button>
+                        <button id="clearBtn" class="btn btn-secondary hover-lift">Clear</button>
                         <button id="themeToggle" class="btn-icon hover-scale" title="Toggle dark/light mode">
                             <img id="themeIcon" src="assets/dark.png" alt="Theme" class="w-5 h-5">
                         </button>
